--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
-Django==5.1.3
+Django==Django==4.2.15
 django-environ==0.11.2
 idna==3.10
 requests==2.32.3
